[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Skins pressed.png" type="Texture" id=1]
[ext_resource path="res://assets/Main Menu button.png" type="Texture" id=2]
[ext_resource path="res://assets/Main Menu pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/Ranked pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/Clubs button.png" type="Texture" id=5]
[ext_resource path="res://assets/Ranked button.png" type="Texture" id=6]
[ext_resource path="res://assets/Skins button.png" type="Texture" id=7]
[ext_resource path="res://assets/Profile pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/Profile button.png" type="Texture" id=9]
[ext_resource path="res://assets/Clubs pressed.png" type="Texture" id=10]
[ext_resource path="res://Main Buttons.gd" type="Script" id=11]
[ext_resource path="res://assets/Sounds/ButtonClick.wav" type="AudioStream" id=12]

[node name="Main Buttons" type="HBoxContainer"]
margin_top = 670.0
margin_right = 496.0
margin_bottom = 717.0
size_flags_horizontal = 0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clubs" type="TextureButton" parent="."]
margin_right = 95.0
margin_bottom = 47.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 10 )

[node name="Skins" type="TextureButton" parent="."]
margin_left = 99.0
margin_right = 194.0
margin_bottom = 47.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 1 )

[node name="Main Menu" type="TextureButton" parent="."]
margin_left = 198.0
margin_right = 298.0
margin_bottom = 47.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[node name="Ranked" type="TextureButton" parent="."]
margin_left = 302.0
margin_right = 397.0
margin_bottom = 47.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )

[node name="Profile" type="TextureButton" parent="."]
margin_left = 401.0
margin_right = 496.0
margin_bottom = 47.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
[connection signal="pressed" from="Clubs" to="." method="_on_Clubs_pressed"]
[connection signal="pressed" from="Skins" to="." method="_on_Skins_pressed"]
[connection signal="pressed" from="Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="Ranked" to="." method="_on_Ranked_pressed"]
[connection signal="pressed" from="Profile" to="." method="_on_Profile_pressed"]
